--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "SurveyApp",
-  "version": "1.0.0",
-  "description": "Udemy Course - React + Redux + Node.js + Express + MongoDB",
-  "main": "index.js",
-  "repository": "git@github.com:LucasMatuszewski/Udemy-Node-React-SurveyApp.git",
-  "author": "Lukasz",
-  "license": "MIT"
+    "name": "SurveyApp",
+    "version": "1.0.0",
+    "description": "Udemy Course - React + Redux + Node.js + Express + MongoDB",
+    "main": "index.js",
+    "engines": {
+        "node": "8.1.1",
+        "npm": "5.0.3"
+    },
+    "scripts": {
+        "start": "node index.js"
+    },
+    "repository": "git@github.com:LucasMatuszewski/Udemy-Node-React-SurveyApp.git",
+    "author": "Lukasz",
+    "license": "MIT",
+    "dependencies": {
+        "express": "^4.16.3"
+    }
 }
