--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
     "description": "Udemy Course - React + Redux + Node.js + Express + MongoDB",
     "main": "index.js",
     "engines": {
-        "node": "8.1.1",
-        "npm": "5.0.3"
+        "node": "8.9.3",
+        "npm": "6.1.0"
     },
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
     "repository": "git@github.com:LucasMatuszewski/Udemy-Node-React-SurveyApp.git",
     "author": "Lukasz",
     "license": "MIT",
     "dependencies": {
-        "express": "^4.16.3"
+        "cookie-session": "^2.0.0-beta.3",
+        "express": "^4.16.3",
+        "mongoose": "^5.1.7",
+        "passport": "^0.4.0",
+        "passport-google-oauth20": "^1.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^1.17.5"
     }
 }
