--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     },
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "server": "nodemon index.js",
+        "client": "npm run start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "repository": "git@github.com:LucasMatuszewski/Udemy-Node-React-SurveyApp.git",
     "author": "Lukasz",
     "license": "MIT",
     "dependencies": {
+        "concurrently": "^3.6.0",
         "cookie-session": "^2.0.0-beta.3",
         "express": "^4.16.3",
         "mongoose": "^5.1.7",
